2021-10-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator: Add ".by_value" to struct arguments
	* generator: Add struct alias hook
	* examples: Added
	* examples/shapes_basic_shapes.rb: Added

2021-10-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Experimental raylib header parser

2021-10-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* initial commmit