@@ -1531,7 +1531,7 @@ module Raylib
       :SetRandomSeed => [:uint],
       :TakeScreenshot => [:pointer],
       :SetConfigFlags => [:uint],
-      :TraceLog => [:int, :pointer],
+      :TraceLog => [:int, :pointer, :varargs],
       :SetTraceLogLevel => [:int],
       :MemAlloc => [:int],
       :MemRealloc => [:pointer, :int],
@@ -1787,7 +1787,7 @@ module Raylib
       :TextCopy => [:pointer, :pointer],
       :TextIsEqual => [:pointer, :pointer],
       :TextLength => [:pointer],
-      :TextFormat => [:pointer],
+      :TextFormat => [:pointer, :varargs],
       :TextSubtext => [:pointer, :int, :int],
       :TextReplace => [:pointer, :pointer, :pointer],
       :TextInsert => [:pointer, :pointer, :int],
